--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
     "bootstrap": "^5.3.3",
+    "clsx": "^2.1.0",
     "formik": "^2.4.5",
+    "framer-motion": "^11.0.24",
     "next": "14.1.4",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "react-tsparticles": "^2.12.2",
+    "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
