--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.0",
+    "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
+    "express": "^4.19.2",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.24",
+    "json2csv": "^6.0.0-alpha.2",
     "next": "14.1.4",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
@@ -27,6 +33,9 @@
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
