--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
     "@types/axios": "^0.14.0",
+    "@types/mongoose": "^5.11.97",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.0",
     "cors": "^2.8.5",
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
+    "firebase": "^10.10.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.24",
     "json2csv": "^6.0.0-alpha.2",
+    "mongodb": "^6.5.0",
+    "moongoose": "^0.0.5",
     "next": "14.1.4",
+    "pg": "^8.11.5",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
@@ -30,7 +35,8 @@
     "react-slick": "^0.30.2",
     "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.2.2",
+    "vertx": "^0.0.1-security"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
